# cyrus

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Taskfile.yml  clippy.toml  lefthook.yml  rustfmt.toml
crates/cyrus-core/: Cargo.toml
crates/cyrus-core/src/: cosmology.rs  divisor.rs  error.rs  flat_direction.rs  geometry.rs  glsm.rs  integer_math.rs  intersection.rs  kahler.rs  kklt.rs  lattice.rs  lib.rs  lvs.rs  pipeline.rs  policy.rs  polytope.rs  racetrack.rs  triangulation.rs  vacuum.rs  volume.rs
crates/cyrus-core/src/intersection/: compute.rs  mod.rs  tests.rs
crates/cyrus-core/src/types/: algebra.rs  arithmetic.rs  branded.rs  dimension.rs  f64.rs  f64_macros.rs  i32.rs  i64.rs  interval.rs  mod.rs  ops_impl.rs  physics.rs  range.rs  rational.rs  tags.rs  vec.rs
crates/cyrus-core/src/types/algebra/: add.rs  div.rs  mod.rs  mul.rs  sub.rs  unary.rs
crates/cyrus-core/src/types/f64/: mod.rs  tests.rs
crates/cyrus-core/src/types/i64/: mod.rs  tests.rs
crates/cyrus-core/tests/: cosmology_edge_cases.rs  divisor_integration.rs  flat_direction_edge_cases.rs  integer_math_edge_cases.rs  intersection_integration.rs  kahler_edge_cases.rs  mcallister_e2e.rs  mcallister_validation.rs  more_edge_cases.rs  pipeline_edge_cases.rs  racetrack_edge_cases.rs  triangulation_edge_cases.rs  trybuild.rs
crates/cyrus-core/tests/fixtures/4_214_647/: flux.json  gv_basis_old.json  gv_invariants.json  intersection.json  kahler_moduli.json  mcallister_values.json  polytope.json  racetrack.json  triangulation.json
crates/cyrus-core/tests/fixtures/5_113_4627_alternative/: flux.json  gv_invariants.json  kahler_moduli.json  mcallister_values.json  racetrack.json  triangulation.json
crates/cyrus-core/tests/fixtures/5_113_4627_main/: flux.json  intersection.json  kahler_moduli.json  mcallister_values.json  polytope.json  racetrack.json  triangulation.json
crates/cyrus-core/tests/fixtures/5_81_3213/: flux.json  gv_invariants.json  intersection.json  kahler_moduli.json  mcallister_values.json  polytope.json  racetrack.json  triangulation.json
crates/cyrus-core/tests/fixtures/7_51_13590/: flux.json  gv_invariants.json  intersection.json  kahler_moduli.json  mcallister_values.json  polytope.json  racetrack.json  triangulation.json
crates/cyrus-core/tests/mcallister_e2e/: CLAUDE.md  stage1_polytope.rs  stage2_triangulation.rs
crates/cyrus-core/tests/mcallister_e2e/assertions/: dual_points.json  heights.json  kklt_basis.json  triangulation.json
crates/cyrus-core/tests/mcallister_e2e/inputs/: README.md  flux.json  polytope.json
crates/cyrus-core/tests/mcallister_e2e/inputs/injections/: dual_basis.json
crates/cyrus-core/tests/mcallister_e2e/overrides/: curves.json  primal_basis.json  target_volumes.json
crates/cyrus-core/tests/mcallister_e2e/snapshots/: mcallister_e2e__stage1_polytope__dual_point_count.snap  mcallister_e2e__stage1_polytope__dual_points.snap  mcallister_e2e__stage1_polytope__dual_sample_points.snap  mcallister_e2e__stage1_polytope__primal_dimension.snap  mcallister_e2e__stage1_polytope__primal_point_count.snap  mcallister_e2e__stage1_polytope__primal_points.snap  mcallister_e2e__stage1_polytope__primal_sample_points.snap  mcallister_e2e__stage2_triangulation__heights_ours.snap  mcallister_e2e__stage2_triangulation__triangulation_simplices_ours.snap  mcallister_e2e__stage2_triangulation__triangulation_simplices_theirs.snap
crates/cyrus-core/tests/snapshots/: mcallister_validation__racetrack_4_214_647.snap
crates/cyrus-core/tests/ui/fail/: arithmetic_nonzero_times_zero.rs  arithmetic_nonzero_times_zero.stderr  arithmetic_pos_plus_neg_not_pos.rs  arithmetic_pos_plus_neg_not_pos.stderr  bvec_wrong_brand.rs  bvec_wrong_brand.stderr  checked_range_invalid.rs  checked_range_invalid.stderr  divide_by_zero.rs  divide_by_zero.stderr  escape_brand.rs  escape_brand.stderr  finite_abs_not_pos.rs  finite_abs_not_pos.stderr  forge_index.rs  forge_index.stderr  mix_brands.rs  mix_brands.stderr  mix_typed_with_plain_f64.rs  mix_typed_with_plain_f64.stderr  neg_macro_positive.rs  neg_macro_positive.stderr  neg_plus_neg_not_pos.rs  neg_plus_neg_not_pos.stderr  pos_macro_infinity.rs  pos_macro_infinity.stderr  pos_macro_negative.rs  pos_macro_negative.stderr
crates/cyrus-core/tests/ui/pass/: arithmetic_basics.rs  negation_flips_sign.rs  nonzero_abs_is_pos.rs  zero_identity.rs
docs/: RUST_CRATES_GUIDE.md
scripts/: check_file_length.sh
