[workspace]
resolver = "2"
members = [
    "crates/cyrus-core",
]

# Workspace-wide lints (strict by default)
[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow these pedantic lints
module_name_repetitions = "allow"
must_use_candidate = "allow"
# Disable cargo metadata warnings for now
cargo_common_metadata = "allow"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ndbroadbent/cyrus"
authors = ["Nathan Broadbent <nathan@ndbroadbent.com>"]
keywords = ["calabi-yau", "string-theory", "physics", "cosmology"]
categories = ["science", "mathematics"]

[workspace.dependencies]
# Math
nalgebra = "0.33"
ndarray = "0.16"
num-rational = "0.4"
num-integer = "0.1"
num-traits = "0.2"

# Arbitrary precision
rug = "1.24"  # GMP/MPFR bindings

# Linear algebra
faer = "0.20"  # Fast pure-Rust linear algebra

# ODE solvers
ode_solvers = "0.5"

# Parallelism
rayon = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Compression
zstd = "0.13"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }
ahash = "0.8"

# Caching
moka = { version = "0.12", features = ["sync"] }  # Concurrent cache

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
proptest = "1.5"
criterion = "0.5"

# Error handling
thiserror = "2"
anyhow = "1"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
debug = true
