[package]
name = "cyrus-core"
description = "Core mathematical primitives for Calabi-Yau manifold computations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
nalgebra.workspace = true
ndarray.workspace = true
num-rational.workspace = true
num-integer.workspace = true
num-traits.workspace = true
faer.workspace = true
rayon.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "intersection"
harness = false
