[package]
name = "cyrus-core"
description = "Core mathematical primitives for Calabi-Yau manifold computations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
rayon.workspace = true
faer = { workspace = true }

[dev-dependencies]
proptest.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
